<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/showDate"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/dateofshow"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/showTime"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/timeofshow"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bandName"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/actname"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFF110F"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ticketPrice"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/price"
            android:textColor="#20e634"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bandImage"
            android:layout_width="160dp"
            android:layout_height="140dp"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/bandimagestring"
            android:scaleType="fitXY"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/buyTickets"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignStart="@+id/imageView"
            android:layout_centerVertical="true"
            android:adjustViewBounds="false"
            android:contentDescription="@string/ticketsimagestring"
            android:scaleType="fitXY"
            android:src="@drawable/buyticketsbutton"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="false"
            android:contentDescription="@string/ticketsimagestring"
            android:scaleType="fitEnd"
            android:src="@drawable/frame" />

        <TextView
            android:id="@+id/bandWhereFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/wherefrom"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff2678e6"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/otherActs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bandWhereFrom"
            android:gravity="center_horizontal"
            android:text="@string/otheractsstring"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#e6e045"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/otherInfo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/otherinfo"
            android:textColor="#da09e6"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/musicType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otherActs"
            android:gravity="center_horizontal"
            android:text="@string/musictype"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffe68628"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/bandNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center_horizontal"
            android:text="@string/bandnotes"
            android:textColor="#b8b8b8"
            android:textSize="12sp"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>